--- a/about.css
+++ b/about.css
@@ -299,3 +299,89 @@ footer .legalese a + a {
     rgba(217, 231, 255, 0.73) 100%
   );
 }
+
+
+
+
+
+
+/* new nav */
+
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+.nav-ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 30rem;
+  padding: 0;
+  margin-top: -7rem;
+  list-style-type: none;
+}
+
+.nav-ul li a {
+  display: inline-block;
+  color: #104d8e;
+  font-size: 15px;
+  font-family: "Nunito Sans",sans-serif;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.nav-ul li a:hover {
+  color: #007bff;
+}
+
+#btn-register {
+  float: right;
+  margin-top: -5rem;
+  font-size: 18px;
+  background-color: #3594d0;
+}
+
+#btn-register:hover {
+  background-color: #00a2ff;
+}
+
+.hamburger {
+  background-color: transparent;
+  border: 0;
+  display: none;
+  color: #3594d0;
+  cursor: pointer;
+  font-size: 25px;
+}
+
+.hamburger:focus {
+  outline: none;
+}
+
+@media screen  and (max-width: 767px) {
+  .nav-ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .nav-ul.show {
+    display: flex;
+    font-size: 24px;
+  }
+
+  .hamburger {
+    display: block;
+    float: right;
+    margin-top: 2rem;
+  }
+
+  #btn-register {
+    margin-top: 2rem;
+    margin-right: 0.8rem;
+  }
+}
