--- a/contact.css
+++ b/contact.css
@@ -138,11 +138,30 @@ button {
 #form-title {
   font-size: 1.6rem;
   font-weight: 350;
+  margin-top: 1.3rem;
+}
+
+span {
+  color: red;
 }
 
 #inputtext {
   font-size: 1.7rem;
   background: rgb(240, 237, 237);
+}
+
+#submit {
+  font-size: 2rem;
+  background-color: #A9A9A9;
+  border-color: #A9A9A9;
+  max-width: 75%;
+  margin-left: 6rem;
+  margin-top: 4rem;
+}
+
+#submit:hover {
+  background: #3594d0;
+  border-color: #3594d0;
 }
 
 .pre-footer {
@@ -309,4 +328,88 @@ footer .legalese a + a {
     rgba(227, 255, 231, 0.52) 0,
     rgba(217, 231, 255, 0.73) 100%
   );
+}
+
+
+
+
+/* new nav */
+
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+.nav-ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 30rem;
+  padding: 0;
+  margin-top: -7rem;
+  list-style-type: none;
+}
+
+.nav-ul li a {
+  display: inline-block;
+  color: #104d8e;
+  font-size: 15px;
+  font-family: "Nunito Sans",sans-serif;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.nav-ul li a:hover {
+  color: #007bff;
+}
+
+#btn-register {
+  float: right;
+  margin-top: -5rem;
+  font-size: 18px;
+  background-color: #3594d0;
+}
+
+#btn-register:hover {
+  background-color: #00a2ff;
+}
+
+.hamburger {
+  background-color: transparent;
+  border: 0;
+  display: none;
+  color: #3594d0;
+  cursor: pointer;
+  font-size: 25px;
+}
+
+.hamburger:focus {
+  outline: none;
+}
+
+@media screen  and (max-width: 767px) {
+  .nav-ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .nav-ul.show {
+    display: flex;
+    font-size: 24px;
+  }
+
+  .hamburger {
+    display: block;
+    float: right;
+    margin-top: 2rem;
+  }
+
+  #btn-register {
+    margin-top: 2rem;
+    margin-right: 0.8rem;
+  }
 }
