--- a/home.css
+++ b/home.css
@@ -1,24 +1,246 @@
+ 
 
-body {
+ 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+    font-family: 'Roboto', sans-serif;
+}
+
+/* li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.header{
+    border-bottom: 1px solid #E2E8F0;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
+}
+
+.hamburger {
+    display: none;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #101010;
+}
+
+.nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-item {
+    margin-left: 5rem;
+}
+
+.nav-link{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #475569;
+}
+
+.nav-link:hover{
+    color: #482ff7;
+}
+
+.nav-logo {
+    font-size: 2.1rem;
+    font-weight: 500;
+    color: #482ff7;
+}
+
+@media only screen and (max-width: 768px) {
+    .nav-menu {
+        position: fixed;
+        left: -100%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: #fff;
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
+    }
+
+    .nav-menu.active {
+        left: 0;
+    }
+
+    .nav-item {
+        margin: 2.5rem 0;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+      .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+}  */
+
+
+
+
+
+
+
+
+
+/* .hamburger {
+  padding: 15px 15px;
+  display: inline-block;
+  cursor: pointer;
+  transition-property: opacity, filter;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  overflow: visible;
+}
+.hamburger:hover {
+  opacity: 0.95;
+}
+.hamburger-box {
+  width: 24px;
+  height: 18px;
+  display: inline-block;
+  position: relative;
+  margin-left: 9rem;
+}
+.hamburger-inner {
+  display: block;
+  top: 50%;
+  margin-top: -1px;
+}
+.hamburger-inner,
+.hamburger-inner::after,
+.hamburger-inner::before {
+  width: 24px;
+  height: 2px;
+  background-color: #104d8e;
+  border-radius: 4px;
+  position: absolute;
+  transition-property: transform;
+  transition-duration: 0.15s;
+  transition-timing-function: ease;
+}
+.hamburger-inner::after,
+.hamburger-inner::before {
+  content: "";
+  display: block;
+}
+.hamburger-inner::before {
+  top: -8px;
+}
+.hamburger-inner::after {
+  bottom: -8px;
+}
+.hamburger--emphatic {
+  overflow: hidden;
+}
+.hamburger--emphatic .hamburger-inner {
+  transition: background-color 125ms 175ms ease-in;
+}
+.hamburger--emphatic .hamburger-inner::before {
+  left: 0;
+  transition: transform 125ms cubic-bezier(0.6, 0.04, 0.98, 0.335),
+    top 50ms 125ms linear, left 125ms 175ms ease-in;
+}
+.hamburger--emphatic .hamburger-inner::after {
+  top: 8px;
+  right: 0;
+  transition: transform 125ms cubic-bezier(0.6, 0.04, 0.98, 0.335),
+    top 50ms 125ms linear, right 125ms 175ms ease-in;
+}
+.hamburger--emphatic.is-active .hamburger-inner {
+  transition-delay: 0s;
+  transition-timing-function: ease-out;
+  background-color: transparent;
+}
+.hamburger--emphatic.is-active .hamburger-inner::before {
+  left: -48px;
+  top: -48px;
+  transform: translate3d(48px, 48px, 0) rotate(45deg);
+  transition: left 125ms ease-out, top 50ms 125ms linear,
+    transform 125ms 175ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.hamburger--emphatic.is-active .hamburger-inner::after {
+  right: -48px;
+  top: -48px;
+  transform: translate3d(-48px, 48px, 0) rotate(-45deg);
+  transition: right 125ms ease-out, top 50ms 125ms linear,
+    transform 125ms 175ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}  */
+
+
+
+
+
+
+
+
+
+
+/* body {
     font-family: "Nunito Sans",sans-serif;
     font-weight: 300;
     overflow-y: scroll;
 }
 
-header .navbar .navbar-brand {
+ header .navbar .navbar-brand {
   margin-right: 0;
   max-width: 8rem;
 }
+
 header .navbar-nav {
   margin-left: auto;
-}
+} */
 
 .logo {
     height: 10rem;
     width: 20em;
     margin-left: -4rem;
 }
-
+/*
 #menu-items {
     margin-top: 4rem;
     margin-right: 8rem;
@@ -36,8 +258,9 @@ h6 {
 a,
 a:hover,
 a:visited {
-  text-decoration: none;
-}
+  text-decoration: none; 
+} */
+/* 
 .btn,
 button {
   box-shadow: none !important;
@@ -83,13 +306,13 @@ button {
   border-style: solid;
   border-width: 2px;
   border-radius: 2px;
-}
+} 
+
 
 .menu-itemSize {
     font-size: 1.7rem;
-    
     margin-right: 1rem;
-}
+} */
 
 #register {
     font-size: 2rem;
@@ -119,6 +342,116 @@ button {
   border-color: #5eaada;
 }
 
+.mainNav {
+  display: none;
+  position: absolute;
+  z-index: -1000;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+}
+.mainNav nav {
+  width: 90%;
+  margin: auto;
+}
+.mainNav nav a {
+  display: table;
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: #104d8e;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  padding: 5px 8px;
+}
+.mainNav nav a:active {
+  font-weight: 600;
+  color: #1862a0;
+}
+.mainNav nav a + a {
+  margin-top: 4px;
+}
+body.mainNavOpen {
+  overflow: hidden;
+}
+body.mainNavOpen .mainNav {
+  display: flex;
+  z-index: 2;
+}
+body.mainNavOpen header {
+  z-index: 10;
+  position: relative;
+}
+header {
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  color: #104d8e;
+}
+header .navbar .btn-tertiary {
+  letter-spacing: 2px;
+  border-radius: 4px;
+}
+header .navbar button {
+  margin-left: 10px;
+  padding: 0;
+  padding-top: 5px;
+  vertical-align: middle;
+}
+header .navbar .navbar-brand {
+  margin-right: 0;
+  max-width: 9rem;
+}
+header .navbar-nav {
+  margin-left: auto;
+}
+header .navbar-nav .nav-item,
+header .navbar-nav .nav-link {
+  color: inherit;
+  margin-right: 1rem;
+  font-weight: 400;
+}
+header .navbar-nav .nav-item:hover,
+header .navbar-nav .nav-link:hover {
+  color: #3594d0;
+}
+header .navbar-nav .nav-item.active,
+header .navbar-nav .nav-link.active {
+  color: #88c0e3;
+} 
+
+
+ .bottom-margin-50 {
+  margin-bottom: 80px;
+}
+.page {
+  padding-top: 4rem;
+  margin-bottom: 120px;
+}
+.page p + h4 {
+  margin-top: 3rem;
+}
+.page-header {
+  border-top: solid 0.1rem #104d8e;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  text-align: center;
+}
+.page-header h4 {
+  margin: 0;
+  margin-bottom: 0.5rem;
+  font-size: 2rem;
+  color: #104d8e;
+}
+.page-header h5 {
+  margin: 0;
+  color: #3594d0;
+}
+
+
+/* carousel slide */
+
 .index-jumbotron .carousel-item {
   background-repeat: no-repeat;
   background-size: cover;
@@ -137,7 +470,7 @@ button {
   margin-bottom: 2rem;
 }
 
-.largeText {
+#largeText {
     font-size: 4em;
 }
 
@@ -240,14 +573,14 @@ footer {
   background: #0b3460;
   padding-top: 4rem;
 }
-footer img.brand {
+/* footer img.brand {
   margin-bottom: 2rem;
   max-width: 180px;
-}
+} 
 footer p {
   line-height: 1.3;
   font-size: 0.9rem;
-}
+}*/
 footer img.rec {
   max-width: 180px;
 }
@@ -280,6 +613,39 @@ footer .legalese a:hover {
 footer .legalese a + a {
   margin-left: 1rem;
 }
+
+@media screen and (max-width: 576px) {
+  .index-jumbotron .carousel-caption {
+    top: 25%;
+  }
+  .index-jumbotron .carousel-caption h1 {
+    max-width: 100%;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 576px) {
+  .navbar-expand-sm .navbar-nav .nav-item,
+  .navbar-expand-sm .navbar-nav .nav-link {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  header img {
+    max-width: 200px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .navbar-expand-sm .navbar-nav .nav-item,
+  .navbar-expand-sm .navbar-nav .nav-link {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin-right: 2rem;
+  }
+  .index-jumbotron h1 {
+    font-size: 2.5rem;
+  }
+}
+
 
 @media screen and (max-width: 576px) {
   .index-jumbotron .carousel-caption {
@@ -356,4 +722,87 @@ footer .legalese a + a {
 
 #icons {
   margin-top: -6rem;
+}
+
+
+/* new nav */
+
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+.nav-ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 30rem;
+  padding: 0;
+  margin-top: -7rem;
+  list-style-type: none;
+}
+
+.nav-ul li a {
+  display: inline-block;
+  color: #104d8e;
+  font-size: 15px;
+  font-family: "Nunito Sans",sans-serif;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.nav-ul li a:hover {
+  color: #007bff;
+}
+
+#btn-register {
+  float: right;
+  margin-top: -5rem;
+  font-size: 18px;
+  background-color: #3594d0;
+}
+
+#btn-register:hover {
+  background-color: #00a2ff;
+}
+
+.hamburger {
+  background-color: transparent;
+  border: 0;
+  display: none;
+  color: #3594d0;
+  cursor: pointer;
+  font-size: 25px;
+}
+
+.hamburger:focus {
+  outline: none;
+}
+
+@media screen  and (max-width: 767px) {
+  .nav-ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .nav-ul.show {
+    display: flex;
+    font-size: 24px;
+  }
+
+  .hamburger {
+    display: block;
+    float: right;
+    margin-top: 2rem;
+  }
+
+  #btn-register {
+    margin-top: 2rem;
+    margin-right: 0.8rem;
+  } 
+  
 }
